k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluttonic-service
spec:
  selector:
    app: fluttonic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30082
  type: LoadBalancer
