k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluttonic-ingress
spec:
  rules:
    - host: fluttonic.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fluttonic-service
                port:
                  number: 80
